--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,49 @@ body {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p{
+  margin: 0;
+}
+
+button{
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+}
+
+ul,
+ol{
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+a{
+  text-decoration: none;
+  /*color: inherit; */
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
 .logo {
   color: var(--dark);
   text-decoration: none;
@@ -191,7 +234,7 @@ body {
 }
 .team-box {
   background: var(--light);
-  padding-top: 120px 0;
+  padding: 120px 0;
 }
 .worker-name {
   color: var(--dark);
@@ -312,8 +355,15 @@ body {
 }
 
 .section {
-  padding: 120px 0px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
+
+
+.doing section{
+  padding-top: 0;
+}
+
 
 
 .top-line {
@@ -362,4 +412,6 @@ body {
 
 img{
   display: block;
+  max-width:100%;
+  height: auto;
 }
